Changed swagger definition to include project owner and tag parameter fields in getAllProjectsV1
